added .env file
