# docs/swagger.yaml
@@ -46,7 +46,7 @@ definitions:
       status-ok:
         type: integer
     type: object
-host: localhost:8080
+host: 127.0.0.1:8000
 info:
   contact: {}
   description: Homework swagger api, added sessions and auth.
@@ -224,8 +224,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/types.PostTaskHandlerResponse'
         "400":
